--- a/src/main/resources/application-local-aws.properties
+++ b/src/main/resources/application-local-aws.properties
@@ -1,2 +1,3 @@
 # Property overrides to run the app locally pointing to AWS services
 spring.cloud.aws.credentials.profile.name=siva
+spring.config.import=aws-secretsmanager:secrets/api-secrets
