--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -6,3 +6,4 @@ spring.datasource.password=postgres
 
 spring.cloud.aws.endpoint=http://localhost:4566
 spring.cloud.aws.s3.path-style-access-enabled=true
+spring.config.import=aws-secretsmanager:/secrets/api-secrets
