--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,17 @@
 spring.application.name=spring-boot-aws-demo
 server.shutdown=graceful
+
+logging.level.com.sivalabs=debug
+management.endpoints.web.exposure.include=*
+
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+spring.flyway.locations=classpath:/db/migration/{vendor}
+
 spring.servlet.multipart.max-file-size=2MB
 spring.cloud.aws.region.static=us-east-1
+
 app.bucketName=sivalabs-practice
+app.queueName=testQueue
+app.topicName=testTopic
+app.apiKey=${api-key}
