--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -5,5 +5,8 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 
 spring.cloud.aws.endpoint=http://localhost:4566
+spring.cloud.aws.credentials.access-key=test
+spring.cloud.aws.credentials.secret-key=test
+spring.cloud.aws.region.static=us-east-1
 spring.cloud.aws.s3.path-style-access-enabled=true
 spring.config.import=aws-secretsmanager:/secrets/api-secrets
