--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=spring-boot-aws-demo
+spring.application.name=spring-boot-aws-kitchensink
 server.shutdown=graceful
 
 logging.level.com.sivalabs=debug
@@ -14,4 +14,4 @@ spring.cloud.aws.region.static=us-east-1
 app.bucketName=sivalabs-practice
 app.queueName=testQueue
 app.topicName=testTopic
-app.apiKey=${api-key}
+app.apiKey=dummy
