Fix secrets issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,4 @@ spring.cloud.aws.region.static=us-east-1
 app.bucketName=sivalabs-practice
 app.queueName=testQueue
 app.topicName=testTopic
-app.apiKey=dummy
+#app.apiKey=dummy
