--- a/src/main/resources/application-local-aws.properties
+++ b/src/main/resources/application-local-aws.properties
@@ -1,3 +1,3 @@
 # Property overrides to run the app locally pointing to AWS services
-spring.cloud.aws.credentials.profile.name=siva
+spring.cloud.aws.credentials.profile=siva
 spring.config.import=aws-secretsmanager:secrets/api-secrets
